<resources>
    <string name="app_name">Atmosplay SDK</string>
    <string name="app_id">Your App ID</string>
    <string name="ad_unit_id">Your Ad Unit ID</string>
    <string name="scan">Scan</string>
    <string name="request">Request</string>
    <string name="present">Present</string>
    <string name="payload_loaded">payload loaded</string>
    <string name="play_page_loaded">play page loaded</string>
    <string name="landing_page_loaded">landing page loaded</string>
    <string name="ads_incentive">reward</string>
    <string name="ads_video_finished">video completed</string>
    <string name="ads_video_start">ad start</string>
    <string name="ads_error">error message: %1$d -> %2$s</string>
    <string name="open_camera_permission">open camera permission please.</string>
    <string name="code_request_error">parse QR code error</string>
    <string name="open_write_permission">open WRITE_EXTERNAL_STORAGE permission, it can speed up the ad view showing.</string>
    <string name="open_phone_permission">Please open the READ_PHONE_STATE permissions, or can not normally get imei information, may lead to no advertising revenue</string>
    <string name="load_failed">errorCode: %1$d message: %2$s</string>
    <string name="start_request">Start request ad</string>
    <string name="pre_cache_finished">ad load is complete</string>
    <string name="ad_present_closed">ad was closed</string>
    <string name="loading_ad">ad is loading…</string>
    <string name="cache_cnt">input cache count, default is 1</string>
    <string name="auto_load">auto load</string>
    <string name="clear_cache">clear cache</string>
    <string name="have_no_cache">haven\'t cached data</string>
    <string name="did_not_clear">did not clear</string>
    <string name="cleared">have clearing</string>
    <string name="landing_page_install_btn_clicked">install button clicked</string>
    <string name="test_host">Test Host</string>
    <string name="product_host">Product Host</string>
    <string name="sdk_name">AtmosplayAds SDK</string>
    <string name="ad_list_title">select on of the options below</string>
    <string name="settings">Settings</string>
    <string name="test_model">TestModel</string>
    <string name="auto_ad_model">Auto Ad Model</string>
    <string name="auto_ad_model_interstitial">Auto Ad Model interstitial</string>
    <string name="clear_cached_assets">Clear cached Assets</string>
    <string name="channel_id">Channel ID:</string>
    <string name="preview">Preview</string>
    <string name="input_html_url_or_ad_id">input HTML url or AD_ID</string>
    <string name="clear_log">Clear Log</string>
    <string name="ads_opened">ad opened</string>
    <string name="gdpr_setting">GDPR</string>
</resources>
