<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:onClick="scan"
            android:src="@drawable/ic_baseline_camera_alt_24px" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/am_url_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_html_url_or_ad_id"
                tools:ignore="TextFields" />

            <ImageView
                android:id="@+id/am_clear_url_edit"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="5dp"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:visibility="gone"
                tools:ignore="RtlHardcoded" />
        </FrameLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="verifyAssets"
            android:text="@string/preview"
            android:textAllCaps="false" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/app_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/app_id"
            android:paddingRight="30dp"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/clear2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="5dp"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/unit_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ad_unit_id"
            android:paddingRight="30dp"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/clear"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="5dp"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/request"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/request"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/present"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/present"
            android:textAllCaps="false" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp" />

    </ScrollView>

</LinearLayout>
