<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/app_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_id"
                android:paddingRight="30dp"
                android:singleLine="true"  />

            <ImageView
                android:id="@+id/clear"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="5dp"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                tools:ignore="RtlHardcoded" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/unit_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ad_unit_id"
                android:paddingRight="30dp"
                android:singleLine="true"  />

            <ImageView
                android:id="@+id/clear2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="5dp"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                tools:ignore="RtlHardcoded" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="loadMore"
                android:text="@string/request" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clearLog"
                android:text="@string/clear_log" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <com.zplay.playable.playableadsdemo.util.LogTextView
        android:id="@+id/arvn_log_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>