<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="#ddd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#fff"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/channel_id"
            android:textColor="#222"
            android:textSize="18sp" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

            <EditText
                android:id="@+id/aa_channel_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/aa_clear"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right|center_vertical"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />
        </FrameLayout>

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#fff"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ddd" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#fff"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/test_model"
            android:textColor="#222"
            android:textSize="18sp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/test_env_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#fff"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ddd" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#fff"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/gdpr_setting"
            android:textColor="#222"
            android:textSize="18sp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/gdpr_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#fff"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ddd" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#fff"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/auto_ad_model"
            android:textColor="#222"
            android:textSize="18sp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/autoload_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ddd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#fff"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/auto_ad_model_interstitial"
            android:textColor="#222"
            android:textSize="18sp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/autoload_model_interstitial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ddd" />

    <android.support.v4.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/aa_clear_cache"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:text="@string/clear_cached_assets"
        android:textColor="#fe0e0e" />
</LinearLayout>